--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,11 +5,9 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "references": [
-    { "path": "../base-controller/tsconfig.build.json" },
-    { "path": "../controller-utils/tsconfig.build.json" },
-    { "path": "../network-controller/tsconfig.build.json" },
-    { "path": "../preferences-controller/tsconfig.build.json" }
-  ],
-  "include": ["../../types", "./src"]
+  "references": [],
+  "include": [
+    "../../types",
+    "./src"
+  ]
 }
