--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@ethersproject/providers": "^5.7.0",
     "@metamask/base-controller": "1.1.1",
     "@metamask/contract-metadata": "^2.1.0",
-    "@metamask/controller-utils": "1.0.0",
+    "@metamask/controller-utils": "git+https://github.com/minhthangovn/reuse-controller-utils.git#v1.0.4",
     "@metamask/metamask-eth-abis": "3.0.0",
     "@metamask/network-controller": "2.0.0",
     "@metamask/preferences-controller": "1.0.1",
