Tron address: get balance + toHex

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@ethersproject/providers": "^5.7.0",
     "@metamask/base-controller": "1.1.1",
     "@metamask/contract-metadata": "^2.1.0",
-    "@metamask/controller-utils": "git+https://github.com/minhthangovn/reuse-controller-utils.git#v1.0.4",
+    "@metamask/controller-utils": "git+https://github.com/minhthangovn/reuse-controller-utils.git#main",
     "@metamask/metamask-eth-abis": "3.0.0",
     "@metamask/network-controller": "2.0.0",
     "@metamask/preferences-controller": "1.0.1",
@@ -43,12 +43,13 @@
     "abort-controller": "^3.0.0",
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
-    "eth-query": "^2.1.2",
+    "eth-query": "git+https://github.com/minhthangovn/tron-eth-query.git#main",
     "eth-rpc-errors": "^4.0.0",
     "ethereumjs-util": "^7.0.10",
     "immer": "^9.0.6",
     "multiformats": "^9.5.2",
-    "single-call-balance-checker-abi": "^1.0.0",
+    "single-call-balance-checker-abi": "1.0.0",
+    "tron-format-address": "^0.1.11",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
